menu de navegacao criado

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -6,13 +6,22 @@
     <title>Unity</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./variaveis.css">
 </head> 
 <body>
     <header>
-        <nav class="menu">
-
-        </nav>
+        <div class="menu">
+            <div class="menu__logo">
+            </div>
+            <nav>
+                <ul class="menu__nav">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
 
