logo inserida no menu de navegacao

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -11,20 +11,30 @@
     <header>
         <div class="menu">
             <div class="menu__logo">
+                <img src="./imagens/logo.jpeg" alt="logotipo da empresa">
+                <p>Unity</p>
             </div>
-            <nav>
-                <ul class="menu__nav">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <nav class="menu__nav">
+                <ul class="menu__ul">
+                    <li class="menu__li"><a href="">Planos</a></li>
+                    <li class="menu__li">Sobre</li>
+                    <li class="menu__li">Suporte</li>
+                    <li class="menu__li">Contato</li>
+                </ul>
+                <ul class="menu__login">
+                    <li class="login__li">Cadastre-se</li>
+                    <li class="login__li">Login</li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
+        <aside>
 
+        </aside>
+        <aside>
+
+        </aside>
     </main>
     <footer>
 
