--- a/codigo-fonte/src/usuario/dispositivos.html
+++ b/codigo-fonte/src/usuario/dispositivos.html
@@ -22,9 +22,9 @@
     <section class="container">
         <div class="sidenav">
             <ul class="submenu">
-                <li><a class="active" href="./usuario.html">Conta</a></li>
+                <li><a href="./usuario.html">Conta</a></li>
                 <li><a href="./meuplano.html">Meu Plano</a></li>
-                <li><a href="./dispositivos.html">Dispositivos</a></li>
+                <li><a class="active" href="./dispositivos.html">Dispositivos</a></li>
                 <li><a href="./aparencia.html">Aparência</a></li>
                 <li><a href="#">Sair</a></li>
             </ul>
