--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -7,14 +7,29 @@
     <link rel="stylesheet" href="planos.css">
 </head>
 <body>
-    <div class="container">
+    <header>
+        <div class="logo"></div>
+        <ul class="menu">
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Planos</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+        <div class="profile-picture"></div>
+    </header>
+    <section class="container">
        <div class="card">
-        <div class="text">
             <h2 class="text-main">Texto</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore perspiciatis, natus deserunt illum explicabo rerum delectus fugit incidunt vitae qui.</p>
-        </div>
-    </div>  
-</div> 
+        </div> 
+        <div class="card">
+            <h2 class="text-main">Texto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore perspiciatis, natus deserunt illum explicabo rerum delectus fugit incidunt vitae qui.</p>
+        </div> 
+        <div class="card">
+            <h2 class="text-main">Texto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore perspiciatis, natus deserunt illum explicabo rerum delectus fugit incidunt vitae qui.</p>
+        </div>     
+     </section> 
     
 </body>
 </html>
