aguarda insercao de media query

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -19,7 +19,7 @@
             <nav class="menu__nav">
                 <ul class="menu__ul">
                     <li class="menu__li"><a href="">Planos</a></li>
-                    <li class="menu__li"><a href="#artigo">sobre</a></li>
+                    <li class="menu__li"><a href="#artigo">Sobre</a></li>
                     <li class="menu__li">Suporte</li>
                     <li class="menu__li">Contato</li>
                 </ul>
