nova versão do plano.

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -16,20 +16,32 @@
         </ul>
         <div class="profile-picture"></div>
     </header>
-    <section class="container">
-       <div class="card">
-            <h2 class="text-main">Texto</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore perspiciatis, natus deserunt illum explicabo rerum delectus fugit incidunt vitae qui.</p>
-        </div> 
-        <div class="card">
-            <h2 class="text-main">Texto</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore perspiciatis, natus deserunt illum explicabo rerum delectus fugit incidunt vitae qui.</p>
-        </div> 
-        <div class="card">
-            <h2 class="text-main">Texto</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore perspiciatis, natus deserunt illum explicabo rerum delectus fugit incidunt vitae qui.</p>
-        </div>     
-     </section> 
+    <main class="cards">
+        <section class="card Basico">
+            <div class="icon">
+            <img src="assests/Plano Inicial.png" alt="Plano Basico">
+            </div>
+            <h3>Plano basico</h3>
+            <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, ipsam.</span>
+            <button>Saiba mais</button>
+        </section>
+        <section class="card Intermediario">
+            <div class="icon">
+            <img src="assests/Plano Intermediario.png" alt="Plano Intermediario">
+            </div>
+            <h3>Plano Intermediario</h3>
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, deleniti?</span>
+            <button>Saiba mais</button>
+        </section>
+        <section class="card Premium">
+            <div class="icon">
+            <img src="assests/Plano Premium.png" alt="Plano Premium">
+            </div>
+            <h3>Plano Primium</h3>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, alias!.</span>
+            <button>Saiba mais</button>
+        </section>
+    </main>    
     
 </body>
 </html>
