Update pagina usuários

--- a/codigo-fonte/src/usuario/dispositivos.html
+++ b/codigo-fonte/src/usuario/dispositivos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo"><img src="../imagens/logo.jpeg"/></div>
         <ul class="menu">
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Planos</a></li>
@@ -16,16 +16,13 @@
         </ul>
         <div class="profile-picture"></div>
     </header>
-
-    <h1>CSS Grid Layout </h1>
-    
     <section class="container">
         <div class="sidenav">
             <ul class="submenu">
-                <li><a href="./usuario.html">Conta</a></li>
-                <li><a href="./meuplano.html">Meu Plano</a></li>
-                <li><a class="active" href="./dispositivos.html">Dispositivos</a></li>
-                <li><a href="./aparencia.html">Aparência</a></li>
+                <li><a href="./usuario.html"><img class="icon" src="../imagens/conta-icon.png"/>Conta</a></li>
+                <li><a href="./meuplano.html"><img class="icon" src="../imagens/plano-icon.png"/>Meu Plano</a></li>
+                <li><a class="active" href="./dispositivos.html"><img class="icon" src="../imagens/dispostivos-icon.png"/>Dispositivos</a></li>
+                <li><a href="./aparencia.html"><img class="icon" src="../imagens/aparencia-icon.png"/>Aparência</a></li>
                 <li><a href="#">Sair</a></li>
             </ul>
         </div>
