Enxugando um pouco o CSS.

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -17,7 +17,7 @@
         <div class="profile-picture"></div>
     </header>
     <main class="cards">
-        <section class="card Basico">
+        <section class="card ">
             <div class="icon">
             <img src="assests/Plano Inicial.png" alt="Plano Basico">
             </div>
@@ -25,7 +25,7 @@
             <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, ipsam.</span>
             <button>Saiba mais</button>
         </section>
-        <section class="card Intermediario">
+        <section class="card">
             <div class="icon">
             <img src="assests/Plano Intermediario.png" alt="Plano Intermediario">
             </div>
@@ -33,7 +33,7 @@
             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, deleniti?</span>
             <button>Saiba mais</button>
         </section>
-        <section class="card Premium">
+        <section class="card">
             <div class="icon">
             <img src="assests/Plano Premium.png" alt="Plano Premium">
             </div>
