--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -41,7 +41,26 @@
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, alias!.</span>
             <button>Saiba mais</button>
         </section>
-    </main>    
-    
+    </main>
+    <section class="faq">
+        <details>
+            <summary>Lorem, ipsum dolor.</summary>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+        </details>
+        <details>
+            <summary>Lorem, ipsum dolor.</summary>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+        </details>
+        <details>
+            <summary>Lorem, ipsum dolor.</summary>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+        </details>
+        <details>
+            <summary>Lorem, ipsum dolor.</summary>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+        </details>
+    </section> 
+    <footer>
+    </footer> 
 </body>
 </html>
