Correção de erros.

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -33,6 +33,7 @@
             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, deleniti?</span>
             <button>Saiba mais</button>
         </section>
+        <!--Promoção-->
         <section class="card">
             <div class="icon">
             <img src="assests/Plano Premium.png" alt="Plano Premium">
