--- a/codigo-fonte/src/usuario/usuario.html
+++ b/codigo-fonte/src/usuario/usuario.html
@@ -60,11 +60,10 @@
               </dl>
         </div>
     </section>
-
     <footer>
-
+      <div class="rodape">
+        
+      </div>
     </footer>
-
-
 </body>
 </html>
