--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <header>
+        <div class="logo"><img src="../imagens/logo.jpeg"/></div>
+        <ul class="menu">
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Planos</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+        <div class="profile-picture"></div>
     </header>
     <section class="dashboard">
         <div class="leftmenu"></div>
