--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -10,15 +10,18 @@
     <header>
         <div class="logo"><img src="../imagens/logo.jpeg"/></div>
         <ul class="menu">
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Planos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#">icon</a></li>
+            <li><a href="#">icon</a></li>
+            <li><a href="#">icon</a></li>
         </ul>
         <div class="profile-picture"></div>
     </header>
     <section class="dashboard">
-        <div class="leftmenu"></div>
-        <div class="workarea"></div>
+        <div class="leftmenu">
+            <div class="fotodispositivo">
+            </div>
+        </div><div class="workarea">
+        </div>
     </section>
 </body>
 </html>
