Mudanças no codigo.
responsividade.

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -43,25 +43,28 @@
             <button>Saiba mais</button>
         </section>
     </main>
-    <section class="faq">
+    <section>
         <details>
             <summary>Lorem, ipsum dolor.</summary>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+            <div class="paragrafo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+            </div>
         </details>
         <details>
             <summary>Lorem, ipsum dolor.</summary>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+            <div class="paragrafo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+            </div>
         </details>
         <details>
             <summary>Lorem, ipsum dolor.</summary>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+            <div class="paragrafo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+            </div>
         </details>
         <details>
             <summary>Lorem, ipsum dolor.</summary>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+           <div class="paragrafo"> <p>Lorem ipsum dolor sit amet conseddctetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p></div>
         </details>
-    </section> 
-    <footer>
-    </footer> 
 </body>
 </html>
