--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -18,10 +18,16 @@
     </header>
     <section class="dashboard">
         <div class="leftmenu">
-            <div class="fotodispositivo">
+            <div class="areanavbar"></div>
+            <div class="areadispositivo">
+                <div class="fotodispositivo"></div>
             </div>
-        </div><div class="workarea">
+            <div class="areanome"></div>
+            <div class="areadescricao"></div>
+            <div class="arealocal"></div>
+            <div class="areastatus"></div>
         </div>
+        <div class="workarea"></div>
     </section>
 </body>
 </html>
