--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -27,7 +27,28 @@
             <div class="arealocal"></div>
             <div class="areastatus"></div>
         </div>
-        <div class="workarea"></div>
+        <div class="workarea">
+            <div class="dispositivo">
+                <span class="dispositivo__titulo">
+                    <h3>Lâmpada</h3>
+                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Status:</p>
+                    <p>Ligado</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Ambiente:</p>
+                    <p>Sala</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Permissão:</p>
+                    <p>Todos</p>
+                </span>
+            </div>
+            
+        </div>
     </section>
 </body>
+<script src="https://kit.fontawesome.com/180a605619.js" crossorigin="anonymous"></script>
 </html>
