--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -30,7 +30,7 @@
         <div class="workarea">
             <div class="dispositivo">
                 <span class="dispositivo__titulo">
-                    <h3>Lâmpada</h3>
+                    <h3>Lâmpada 1</h3>
                     <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
                 </span>
                 <span class="dispositivo__info">
@@ -46,7 +46,78 @@
                     <p>Todos</p>
                 </span>
             </div>
-            
+            <div class="dispositivo">
+                <span class="dispositivo__titulo">
+                    <h3>Lâmpada 2</h3>
+                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Status:</p>
+                    <p>Ligado</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Ambiente:</p>
+                    <p>Sala</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Permissão:</p>
+                    <p>Todos</p>
+                </span>
+            </div>
+            <div class="dispositivo">
+                <span class="dispositivo__titulo">
+                    <h3>Geladeira</h3>
+                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Status:</p>
+                    <p>Ligado</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Ambiente:</p>
+                    <p>Sala</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Permissão:</p>
+                    <p>Todos</p>
+                </span>
+            </div>
+            <div class="dispositivo">
+                <span class="dispositivo__titulo">
+                    <h3>Câmera 1</h3>
+                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Status:</p>
+                    <p>Ligado</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Ambiente:</p>
+                    <p>Sala</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Permissão:</p>
+                    <p>Todos</p>
+                </span>
+            </div>
+            <div class="dispositivo">
+                <span class="dispositivo__titulo">
+                    <h3>Câmera 2</h3>
+                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Status:</p>
+                    <p>Ligado</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Ambiente:</p>
+                    <p>Sala</p>
+                </span>
+                <span class="dispositivo__info">
+                    <p>Permissão:</p>
+                    <p>Todos</p>
+                </span>
+            </div>
         </div>
     </section>
 </body>
