segunda ideia para dispositivos

--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -28,94 +28,104 @@
             <div class="areastatus"></div>
         </div>
         <div class="workarea">
-            <div class="dispositivo">
-                <span class="dispositivo__titulo">
-                    <h3>Lâmpada 1</h3>
-                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Status:</p>
-                    <p>Ligado</p>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Ambiente:</p>
-                    <p>Sala</p>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Permissão:</p>
-                    <p>Todos</p>
-                </span>
+            <div class="ambientes">
+                <div class="ambiente">
+                    <span class="ambiente__titulo">
+                        <h3>Sala</h3>
+                        <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                    </span>
+                    <span class="ambiente__dispositivos">
+                        <span class="dispositivos__dispositivo">
+                            <p>Lâmpada 1</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                        <span class="dispositivos__dispositivo">
+                            <p>Câmera 1</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="ambiente">
+                    <span class="ambiente__titulo">
+                        <h3>Cozinha</h3>
+                        <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                    </span>
+                    <span class="ambiente__dispositivos">
+                        <span class="dispositivos__dispositivo">
+                            <p>Lâmpada 2</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                        <span class="dispositivos__dispositivo">
+                            <p>Câmera 2</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="ambiente">
+                    <span class="ambiente__titulo">
+                        <h3>Quarto</h3>
+                        <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                    </span>
+                    <span class="ambiente__dispositivos">
+                        <span class="dispositivos__dispositivo">
+                            <p>Lâmpada 3</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                        <span class="dispositivos__dispositivo">
+                            <p>Câmera 3</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                    </span>
+                </div>
+                <div class="ambiente">
+                    <span class="ambiente__titulo">
+                        <h3>Garagem</h3>
+                        <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                    </span>
+                    <span class="ambiente__dispositivos">
+                        <span class="dispositivos__dispositivo">
+                            <p>Lâmpada 4</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                        <span class="dispositivos__dispositivo">
+                            <p>Câmera 4</p>
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                    </span>
+                </div>
             </div>
-            <div class="dispositivo">
-                <span class="dispositivo__titulo">
-                    <h3>Lâmpada 2</h3>
-                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+            <div class="geral">
+                <span class="geral__dispositivo">
+                    <h4>Lâmpada 1</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
-                <span class="dispositivo__info">
-                    <p>Status:</p>
-                    <p>Ligado</p>
+                <span class="geral__dispositivo">
+                    <h4>Lâmpada 2</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
-                <span class="dispositivo__info">
-                    <p>Ambiente:</p>
-                    <p>Sala</p>
+                <span class="geral__dispositivo">
+                    <h4>Lâmpada 3</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
-                <span class="dispositivo__info">
-                    <p>Permissão:</p>
-                    <p>Todos</p>
+                <span class="geral__dispositivo">
+                    <h4>Lâmpada 4</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
-            </div>
-            <div class="dispositivo">
-                <span class="dispositivo__titulo">
-                    <h3>Geladeira</h3>
-                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                <span class="geral__dispositivo">
+                    <h4>Câmera 1</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
-                <span class="dispositivo__info">
-                    <p>Status:</p>
-                    <p>Ligado</p>
+                <span class="geral__dispositivo">
+                    <h4>Câmera 2</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
-                <span class="dispositivo__info">
-                    <p>Ambiente:</p>
-                    <p>Sala</p>
+                <span class="geral__dispositivo">
+                    <h4>Câmera 3</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
-                <span class="dispositivo__info">
-                    <p>Permissão:</p>
-                    <p>Todos</p>
-                </span>
-            </div>
-            <div class="dispositivo">
-                <span class="dispositivo__titulo">
-                    <h3>Câmera 1</h3>
-                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Status:</p>
-                    <p>Ligado</p>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Ambiente:</p>
-                    <p>Sala</p>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Permissão:</p>
-                    <p>Todos</p>
-                </span>
-            </div>
-            <div class="dispositivo">
-                <span class="dispositivo__titulo">
-                    <h3>Câmera 2</h3>
-                    <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Status:</p>
-                    <p>Ligado</p>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Ambiente:</p>
-                    <p>Sala</p>
-                </span>
-                <span class="dispositivo__info">
-                    <p>Permissão:</p>
-                    <p>Todos</p>
+                <span class="geral__dispositivo">
+                    <h4>Câmera 4</h4>
+                    <i class="fa-solid fa-bars"></i>
                 </span>
             </div>
         </div>
