--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -20,12 +20,22 @@
         <div class="leftmenu">
             <div class="areanavbar"></div>
             <div class="areadispositivo">
-                <div class="fotodispositivo"></div>
+                <div class="fotodispositivo"><img src="assets/Camera.png"></div>
             </div>
-            <div class="areanome"></div>
+            <div class="areanome">
+                <div class="nome-texto"><input type="text">
+                </div>
+            </div>
             <div class="areadescricao"></div>
             <div class="arealocal"></div>
-            <div class="areastatus"></div>
+            <div class="areastatus">
+                <div class="status">
+                <label for="on/off">
+                    <input class="status" type="checkbox">
+                    <span class="power"><ion-icon name="power-outline"></ion-icon></span>
+                </div>
+                
+            </div>
         </div>
         <div class="workarea">
             <div class="ambientes">
@@ -130,6 +140,8 @@
             </div>
         </div>
     </section>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 <script src="https://kit.fontawesome.com/180a605619.js" crossorigin="anonymous"></script>
 </html>
