--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -19,7 +19,7 @@
     <main class="cards">
         <section class="card ">
             <div class="icon">
-            <img src="assests/Plano Inicial.png" alt="Plano Basico">
+            <img src="assets/Plano Inicial.png" alt="Plano Basico">
             </div>
             <h3>Plano basico</h3>
             <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, ipsam.</span>
@@ -27,16 +27,15 @@
         </section>
         <section class="card">
             <div class="icon">
-            <img src="assests/Plano Intermediario.png" alt="Plano Intermediario">
+            <img src="assets/Plano Intermediario.png" alt="Plano Intermediario">
             </div>
             <h3>Plano Intermediario</h3>
             <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, deleniti?</span>
             <button>Saiba mais</button>
         </section>
-        <!--Promoção-->
         <section class="card">
             <div class="icon">
-            <img src="assests/Plano Premium.png" alt="Plano Premium">
+            <img src="assets/Plano Premium.png" alt="Plano Premium">
             </div>
             <h3>Plano Primium</h3>
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, alias!.</span>
