Update left menu
Adição do botão de remoção de dispositivo.

--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -40,6 +40,11 @@
                 </select>
             </div>
             <div class="areastatus">
+                <div class="delete">
+                    <button type="submit" class="deleteButon">
+                        <img src="./assets/remove.png"></img>
+                    </button>
+                </div>
                 <div class="status">
                 <label>
                     <input class="status" type="checkbox">
