Update left menu
Posicionamento das funções

--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -23,15 +23,14 @@
                 <div class="fotodispositivo"><img src="assets/Camera.png"></div>
             </div>
             <div class="areanome">
+                <h2>Nome do dispositivo</h2>
                 <input class="nometexto" type="text">
             </div>
             <div class="areadescricao">
                 <textarea rows="4" cols="50" class="descricao" ></textarea>
             </div>
             <div class="arealocal">
-                <div><h2 class="arealocalTitulo">Local<h2></h2></div>
-            </div>
-            <div class="local">
+                <h2>Localização</h2>
                 <select name="comodos">
                     <option value="" class="opcoes">Sala</option>
                     <option value="" class="opcoes">Cozinha</option>
