--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -27,6 +27,7 @@
                 <input class="nometexto" type="text">
             </div>
             <div class="areadescricao">
+                <h2>Descrição</h2>
                 <textarea rows="4" cols="50" class="descricao" ></textarea>
             </div>
             <div class="arealocal">
