--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -15,7 +15,7 @@
                 <li><a title="Configurações" href="#"><img src="../imagens/Config 2.png" alt="#"></a></li>
                 <li><a title="Adcionar Marcador" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
             </ul>
-        <a href="../usuario/usuario.html"><div class="profile-picture"></div></a>
+        <a href="../usuario/usuario.html"><div class="profile-picture"><img src="../imagens/conta-icon.png" alt=""></div></a>
     </header>
     <section class="dashboard">
         <div class="leftmenu">
